--- a/use-form/form.css
+++ b/use-form/form.css
@@ -33,6 +33,7 @@ h2 {
   box-shadow: 1px 2px 2px;
   /* box-shadow: 0px 0px 5px; */
   margin: 4px 4px;
+  font-weight: bold;
 }
 
 .select-person-wrapper .select-person-list li:hover,
