--- a/ConferenceRoomReservation/app.css
+++ b/ConferenceRoomReservation/app.css
@@ -20,8 +20,19 @@ li {
 }
 
 #main {
+  border: 1px solid #d3d3d3;
   width: 100%;
   height: 100%;
-  margin: 0 auto;
+  margin: auto;
   display: flex;
+  justify-content: center;
+}
+#reservation_wrapper,
+#select_room {
+  margin: 1rem;
+}
+
+#reservation_buttons {
+  display: flex;
+  justify-content: end;
 }
