--- a/ConferenceRoomReservation/app.css
+++ b/ConferenceRoomReservation/app.css
@@ -62,7 +62,7 @@ button {
 button.confirm {
   color: #ffffff;
   background-color: #00448d;
-  border: 1px solid #005fff;
+  border: 1px solid #00448d;
 }
 button.confirm:hover {
   background-color: #1d24ca;
@@ -72,17 +72,17 @@ button.confirm:active {
 }
 
 button.cancel {
-  background-color: #c2c2c2;
-  color: #fff;
-  border: 1px solid #c2c2c2;
+  background-color: #fff;
+  color: #c2c2c2;
+  border: 1px solid #fff;
 }
 
 button.cancel:hover {
-  background-color: #a3c9aa;
+  background-color: #f3eeea;
 }
 
 button.cancel:active {
-  color: #eeeeee;
+  color: #fff;
 }
 
 /* button.delete_person {
