회의실 예약: 마지막 COnfirm 버튼 동작 추가

--- a/ConferenceRoomReservation/app.css
+++ b/ConferenceRoomReservation/app.css
@@ -39,8 +39,9 @@ input[type="radio"]:hover + label {
   display: none;
 }
 
-#userinput_date::before {
+#userinput_date:before {
   content: attr(data-placeholder);
+  display: inline-block;
   width: 100%;
 }
 #userinput_date:focus::before,
