--- a/ScheduleRegistration/src/app.css
+++ b/ScheduleRegistration/src/app.css
@@ -4,8 +4,8 @@
   /* font-family: "Inter-Bold", sans-serif; */
   font-family: Inter, "Source Sans Pro";
 }
-h3 {
-  font-size: 1.2rem;
+h1 {
+  font-size: 1.8rem;
 }
 
 #main {
@@ -36,9 +36,13 @@ h3 {
   /* vertical-align: top; */
 }
 
+#userinput_date {
+  width: 10.5rem;
+  height: 2.5rem;
+}
 #userinput_date::before {
   content: attr(data-placeholder);
-  width: 100%;
+  width: 10.5rem;
 }
 #userinput_date:focus::before,
 #userinput_date:valid::before {
